added tool as maven

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    tools { 
+        maven 'jenkins_maven' 
+    }
     stages {
         stage('Build') {
             steps {
